adds signup form

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title> Sign up | Sign in Overflow</title>
   <%= stylesheet_link_tag    "application", 'ckeditor/ckeditor.js', media: "all", "data-turbolinks-track" => true %>
+    <%= stylesheet_link_tag    "application", 'https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css', media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 
@@ -22,8 +23,8 @@
 
 </head>
 <body class="login">
-  
-  
+
+
  <header class="navbar navbar-inverse navbar-fixed-top bs-docs-na" role="banner">
   <div class="container">
     <nav class="nav navbar-nav pull-right">
@@ -47,42 +48,37 @@
 
   </li>
    </nav>
-    </div>   
+    </div>
     </header>
-    
-
-  
 
 
-   <div class="front-card">
+<div class="bg_container">
+   <div class="HomeLoggedOutBigSignup">
      <% flash.each do |key, value| %>
                     <div class="<%= flash_class(key) %>">
                       <%= value %>
                     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
     </div>
      <% end %>
-     <div class="row">
-             <div class="col-md-7 six">
-              <h1> Welcome to Inquire.</h1>
-<p class="lead" style="color:#fff">Experience exicting moments and share ideas with professionals, getting Satisfying  answers to questions in all Categories of life.<br/> Share & Flow</p>    
+
+             <div class="tagline">
+              <h1 class="sitename"> Welcome to Inquire.</h1>
+<p class="lead">Experience exicting moments and share ideas with professionals, getting Satisfying  answers to questions in all Categories of life.<br/> Share & Flow</p>
              </div>
-           <div class="col-md-5 col-md-offset-0">
-                 <%= yield %>  
-           </div> 
-
-     </div>
+           <div class="container">
+                 <%= yield %>
+           </div>
 
 
- <div class="footer">     
- <nav class="footer"><p><small> © 2014 Overflow &nbsp <a href="#">About</a>&nbsp <a href="#">Help</a>&nbsp <a href="#">Terms</a>&nbsp <a href="#">Privacy</a>
-        <a href="#">Cookies</a>&nbsp <a href="#">Ads</a>&nbsp <a>infoBrand</a>&nbsp <a href="#">Blog</a>&nbsp <a href="#">Status</a> <a href="#">Apps</a> <a>Jobs</a> <a>Advertise</a>
-        &nbsp<a href="#">Businesses</a>&nbsp  <a href="#">Media</a>&nbsp <a href="#">Developers</a></small></p></nav>
+
+ <div class="footer devise-footer">
+ <nav class="footer text-center"><p><small> © 2015 <span class="sitename">INQUIRE</span> &nbsp <a href="#">About</a>&nbsp <a href="#">Help</a>&nbsp <a href="#">Terms</a>&nbsp <a href="#">Privacy</a>
    </div></div>
 
 
 
 
 
- 
+</div>
 </body>
 </html>
