--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -42,10 +42,10 @@ body {
 }
 
 a {
-    color: #363838;    
+    color: #363838;
 }
 a:hover {
-    color: #989c9e;    
+    color: #989c9e;
 }
 
 /*-----------------------------------------------------------------*/
@@ -64,7 +64,7 @@ footer .logo {
 
 ul.socialicons li {
     display: inline-block;
-    list-style: none;  
+    list-style: none;
     font-size: 18px;
     color:#bdc3c7;
     margin-left: 15px;
@@ -163,9 +163,9 @@ ul.socialicons li a:hover {
     background-color: #1abc9c;
 }
 
-.avt .btn-primary:hover, 
-.avt .btn-primary:focus, 
-.avt .btn-primary:active, 
+.avt .btn-primary:hover,
+.avt .btn-primary:focus,
+.avt .btn-primary:active,
 .avt .btn-primary.active{
     background-color: #1abc9c;
 
@@ -444,7 +444,7 @@ td.chbox {
 
     color: rgb(89, 89, 90);
     font-size: 14px;
-    font-family: 'Open Sans Light', sans-serif;   
+    font-family: 'Open Sans Light', sans-serif;
     line-height: 25px;
 }
 
@@ -470,7 +470,7 @@ td.chbox {
 .post h2 {
     color: #363838;
     font-size: 18px;
-    font-family: 'Open Sans', sans-serif;   
+    font-family: 'Open Sans', sans-serif;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -489,7 +489,7 @@ td.chbox {
     padding: 12px 17px;
     color: #ffffff;
     font-size: 14px;
-    font-family: 'Open Sans Bold', sans-serif; 
+    font-family: 'Open Sans Bold', sans-serif;
     position: relative;
 }
 
@@ -510,7 +510,7 @@ td.chbox {
     border-bottom: solid 1px #f1f1f1;
     color:#9da6aa;
     font-size: 12px;
-    font-family: 'Open Sans Regular', sans-serif; 
+    font-family: 'Open Sans Regular', sans-serif;
     text-align: center;
     line-height: 29px;
 }
@@ -522,7 +522,7 @@ td.chbox {
 .post .time {
     color:#9da6aa;
     font-size: 12px;
-    font-family: 'Open Sans Regular', sans-serif; 
+    font-family: 'Open Sans Regular', sans-serif;
     text-align: center;
     line-height: 29px;
 
@@ -545,7 +545,7 @@ td.chbox {
 .breadcrumbf a , .breadcrumbf {
     color: #bdc3c7;
     font-size: 12px;
-    font-family: 'Open Sans Regular', sans-serif; 
+    font-family: 'Open Sans Regular', sans-serif;
     line-height: 62px;
 }
 
@@ -587,7 +587,7 @@ td.chbox {
     margin-left: 18px;
     font-size: 12px;
     color: #bdc3c7;
-    font-family: 'Open Sans Regular', sans-serif; 
+    font-family: 'Open Sans Regular', sans-serif;
 }
 
 .postinfobot .posted i {
@@ -655,7 +655,7 @@ a.down:hover {
     font-size: 12px;
     color: #bdc3c7;
     display: block;
-    font-family: 'Open Sans Regular', sans-serif; 
+    font-family: 'Open Sans Regular', sans-serif;
 }
 
 .textwraper textarea {
@@ -692,7 +692,7 @@ a.down:hover {
 .postinfobot label {
     color: #bdc3c7;
     font-size: 12px;
-    font-family: 'Open Sans Regular', sans-serif; 
+    font-family: 'Open Sans Regular', sans-serif;
 
 }
 
@@ -712,7 +712,7 @@ a.down:hover {
     padding: 10px 15px;
     color: #ffffff;
     font-size: 14px;
-    font-family: 'Open Sans Bold', sans-serif; 
+    font-family: 'Open Sans Bold', sans-serif;
     border: none;
 
 }
@@ -740,7 +740,7 @@ a.down:hover {
     padding: 20px;
     font-size: 14px;
     color: #989c9e;
-    font-family: 'Open Sans Light', sans-serif; 
+    font-family: 'Open Sans Light', sans-serif;
     margin-bottom: 20px;
     height: 50px;
 }
@@ -753,7 +753,7 @@ a.down:hover {
 
     font-size: 14px;
     color: #989c9e;
-    font-family: 'Open Sans Light', sans-serif; 
+    font-family: 'Open Sans Light', sans-serif;
     margin-bottom: 20px;
     height: 50px;
 }
@@ -773,7 +773,7 @@ a.down:hover {
     padding: 20px;
     font-size: 14px;
     color: #989c9e;
-    font-family: 'Open Sans Light', sans-serif; 
+    font-family: 'Open Sans Light', sans-serif;
     margin-bottom: 20px;
     height: 150px;
 }
@@ -787,7 +787,7 @@ a.down:hover {
 .newtopic p {
     font-size: 14px;
     color: #363838;
-    font-family: 'Open Sans Light', sans-serif; 
+    font-family: 'Open Sans Light', sans-serif;
 }
 
 
@@ -857,7 +857,7 @@ a.down:hover {
 .postinfotop h2 {
     color: #363838;
     font-size: 14px;
-    font-family: 'Open Sans Bold', sans-serif; 
+    font-family: 'Open Sans Bold', sans-serif;
     padding: 20px;
     margin: 0;
     border-bottom: solid 1px #f1f1f1;
@@ -918,7 +918,7 @@ a.down:hover {
 
 .accsection .htext {
     width: 40%;
-    float: left; 
+    float: left;
 }
 
 .accsection .hnotice {
@@ -977,7 +977,7 @@ a.down:hover {
 /*--- Extra small devices (less 767px) ---*/
 
 @media (max-width: 767px) {
-    
+
     /*--- index.html ---*/
     .container-fluid {
         padding: 0;
@@ -1025,7 +1025,7 @@ a.down:hover {
     }
 
     .avt {
-        height: auto; 
+        height: auto;
         margin-bottom: 15px;
     }
 
@@ -1089,7 +1089,7 @@ a.down:hover {
         margin-bottom: 20px;
     }
 
-    .accsection .htext, 
+    .accsection .htext,
     .accsection .hnotice {
         width: 100%;
     }
@@ -1156,7 +1156,7 @@ a.down:hover {
     }
 
     .avt {
-        height: auto; 
+        height: auto;
         margin-bottom: 15px;
     }
 
@@ -1180,7 +1180,7 @@ a.down:hover {
     .dropdown.avatar b.caret {
         color: #363838;
     }
-    
+
 }
 
 
@@ -1222,4 +1222,98 @@ a.down:hover {
     .container {
         padding: 0;
     }
+}
+.HomeLoggedOutBigSignup {
+    width: 650px;
+    height: 400px;
+    position: absolute;
+    top: 10%;
+    bottom: initial;
+    left: 0px;
+    right: 0px;
+    margin: auto;
+}
+.HomeLoggedOutBigSignup .tagline {
+    float: none;
+    text-align: center;
+    margin-left: 16px;
+    margin-top: 10px;
+    margin-bottom: 16px;
+    font-size: 19px;
+    line-height: 1.3;
+    color: rgba(175, 175, 175, 0.95);
+}
+.HomeLoggedOutBigSignup .container {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 22px;
+    border-radius: 3px;
+    background: #FFF none repeat scroll 0% 0%;
+    border: 1px solid #DCDCDC;
+    box-shadow: 0px 2px 4px 0px #DCDCDC;
+    margin-top: 0px;
+}
+.HomeLoggedOutBigSignup .container .signup {
+  float: left;
+  padding-right: 32px;
+  border-right: 1px solid #E2E2E2;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 50%;
+}
+.HomeLoggedOutBigSignup .container .login {
+  position: relative;
+  padding-left: 32px;
+  float: left;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 50%;
+}
+.bg_container {
+  position: absolute;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  background-image: url("/assets/inq-bg.jpg")
+}
+.HomeLoggedOutBigSignup .container:after {
+    display: table;
+    content: "";
+    zoom: 1;
+}
+.left {
+  text-align: left;
+  float:left;
+}
+.input-font {
+  font-size: 1.5em !important;
+}
+.facebook_button {
+  background-color: #507cc0;
+}
+.twitter_button {
+    background-color: #64ccf1;
+}
+.google_button {
+    background-color: #df4930;
+}
+.facebook_button, .google_button, .twitter_button {
+    font-size: 16px;
+    color: #fff;
+}
+.tos_disclaimer {
+    color: #999;
+    font-size: 13px;
+    padding-top: 10px;
+}
+.tagline .lead {
+  font-size: 18px !important;
+}
+.devise-footer {
+  margin-top: 10px;
+}
+.sitename {
+  color: #00B5C0;
 }
