--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -23,34 +23,13 @@
 
 </head>
 <body class="login">
-
-
- <header class="navbar navbar-inverse navbar-fixed-top bs-docs-na" role="banner">
-  <div class="container">
-    <nav class="nav navbar-nav pull-right">
-   <li>
-   <%= form_for(resource, html: {class:"form-inline navbar-form navbar-right" }, url: session_path(resource_name)) do |f| %>
-  <div class="form-group">
-    <label class="sr-only" for="exampleInputEmail2">Email address</label>
-    <%= f.email_field :email, required: true, :label=> :false, :class=>"form-control", :placeholder=>"Enter email" %>
-  </div>
-  <div class="form-group">
-    <label class="sr-only" for="exampleInputPassword2">Password</label>
-    <%= f.password_field :password, required: true, :label=> :false, :class=>"form-control", :placeholder=>"Enter password" %>
-  </div>
-  <div class="checkbox">
-    <label>
-      <%= f.check_box :remember_me, :label=> :false, as: :boolean if devise_mapping.rememberable? %> Remember me
-    </label>
-  </div>
-  <button type="submit" class="btn btn-success"><i class="glyphicon glyphicon-log-in"></i>&nbspSign in</button>
-<% end %>
-
-  </li>
-   </nav>
-    </div>
-    </header>
-
+  <header class="navbar navbar-inverse navbar-fixed-top bs-docs-na" role="banner">
+   <div class="container">
+     <div class="nav navbar-left">
+       <h3>INQUIRE</h3>
+     </div>
+   </div>
+ </header>
 
 <div class="bg_container">
    <div class="HomeLoggedOutBigSignup">
