--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,13 +7,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to image_tag('logo.png'), root_path, class:'navbar-brand' %>
+      <%#= link_to image_tag('logo.png'), root_path, class:'navbar-brand' %>
     </div>
     <nav id="bs-navbar" class="collapse navbar-collapse">
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group has-success has-feedback">
           <label class="control-label sr-only" for="inputSuccess5">Hidden label</label>
-          <input type="text" class="form-control" id="inputInfo5" aria-describedby="inputSuccess5Status">
+          <input type="text" class="form-control" id="inputInfo5" placeholder=" Serach Questions" aria-describedby="inputSuccess5Status">
           <span class="fa fa-search form-control-feedback" aria-hidden="true"></span>
           <span id="inputSuccess5Status" class="sr-only">(success)</span>
         </div>
