--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -41,7 +41,7 @@
      <% end %>
 
              <div class="tagline">
-              <h1 class="sitename"> Welcome to Inquire.</h1>
+              <h1 class="sitename"> Welcome to Onozor.</h1>
 <p class="lead">Experience exicting moments and share ideas with professionals, getting Satisfying  answers to questions in all Categories of life.<br/> Share & Flow</p>
              </div>
            <div class="container">
