--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -52,11 +52,11 @@
     <% end %>
   </div><!-- POST -->
 
-  <div class="row similarposts">
-    <div class="col-lg-10"><i class="fa fa-info-circle"></i> <p>Similar Posts according to your <a href="/">Topic Title</a>.</p></div>
-    <div class="col-lg-2 loading"><i class="fa fa-spinner"></i></div>
+  <!--<div class="row similarposts">-->
+    <!--<div class="col-lg-10"><i class="fa fa-info-circle"></i> <p>Similar Posts according to your <a href="/">Topic Title</a>.</p></div>-->
+    <!--<div class="col-lg-2 loading"><i class="fa fa-spinner"></i></div>-->
 
-  </div>
+  <!--</div>-->
 
 <% @similar_question.each do |question| %>
 
